--- a/dhousing.html
+++ b/dhousing.html
@@ -47,7 +47,7 @@
               <a class="nav-link" href=index#projects>Work</a>
           </li>
           <li class="nav-object">
-              <a class="nav-link" href="index#about" >About</a>
+              <a class="nav-link" href="about" >About</a>
           </li>
     
         </ul>
@@ -61,7 +61,7 @@
           <div id="project-date">January - March 2020</div>
           <div id="project-title">Designing A New Way to Find Housing</div>
           <div id="project-description">
-            <a target=”_blank”  href = "https://davishousing.com/">Davis Housing</a> is a website for consumers that provides access to Davis housing locations through an information-based search bar. The wesbite wants to help customers find the right place to live based on their wants and needs.
+            <a target=”_blank”  href = "https://davishousing.com/">Davis Housing</a> is a website for consumers that provides access to Davis housing locations through an information-based search bar. The website wants to help customers find the right place to live based on their wants and needs.
           </div>
     </div>
 </div>
@@ -104,15 +104,26 @@
         <div class="detail-container">
             <div class="detail-title">My Role</div>
             <div class="emoji-img">👩🏻</div>
-            <div class="details-description">UX Designer<br>Searchbar Layout<br>Listings Page</div>
+            <div class="details-description">UX Designer</div>
         </div>
   </div>
 
 </div>
 
+<div class="storyline-bg">
+  <div class="storyline">
+      <div class="storyline-title">The Story</div>
+      <div class="storyline-description">
+        Unfortunately, the work I did at Davis Housing must remain confidential at this time. What I can say is that I helped lay the foundation for the digital experience of a new infromation-search engine. I collaborated with a team to build the pilot version of the website that was built and launched for testing: presenting designs, and research to the stakeholders weekly. Additionally, collaborated with the engineering team to ensure my designs were built to spec. The launch date currently remains TBD. But If you would like to check out Davis Housing's previous website, then click <a target=”_blank”  href = "https://davishousing.com/">here</a>.
+      </div>
+    </div>
+
+    <div class="break-down-row">
+      <a class="back_home" href="index.html"><button type="button" class="btn btn-outline-white back_home_button">Back Home</button></a></div> 
+</div>
 
   
-<div class="storyline-bg">
+<!-- <div class="storyline-bg">
   <div class="storyline">
       <div class="storyline-title">The Story</div>
       <div class="storyline-description">
@@ -125,8 +136,9 @@
         <b>My Role:</b> <br><br> I designed and prototyped the searchbar, listings and advertising layout of the website.
         My team and I all contributed to research, idea generation, and the final presentation. We all worked frequently and closely with Davis Housing's CTO to get feedback and build our solutions.
       </div>
-  </div>
+    </div> 
 </div>
+
 
 <div class="color-bg">
   <div class="problem-space-container">
@@ -202,7 +214,7 @@
 
       <div class="break-down-row">
         <a class="back_home" href="index.html"><button type="button" class="btn btn-outline-white back_home_button">Back Home</button></a></div>
-</div>
+</div> -->
 
         <!-- Footer -->
         <footer class="footer navbar-light bg-light">
