--- a/dcc.html
+++ b/dcc.html
@@ -48,7 +48,7 @@
               <a class="nav-link" href=index#projects>Work</a>
           </li>
           <li class="nav-object">
-              <a class="nav-link" href="index#about" >About</a>
+              <a class="nav-link" href="about" >About</a>
           </li>
     
         </ul>
