--- a/assemble.html
+++ b/assemble.html
@@ -45,10 +45,10 @@
         <ul class="navbar-nav mr-auto">
 
           <li class="nav-object">
-              <a class="nav-link" href=index#projects>Work</a>
+              <a class="nav-link" href=index.html>Work</a>
           </li>
           <li class="nav-object">
-              <a class="nav-link" href="about" >About</a>
+              <a class="nav-link" href="about.html" >About</a>
           </li>
     
         </ul>
