--- a/dhousing.html
+++ b/dhousing.html
@@ -44,11 +44,12 @@
         <ul class="navbar-nav mr-auto">
 
           <li class="nav-object">
-              <a class="nav-link" href=index#projects>Work</a>
-          </li>
-          <li class="nav-object">
-              <a class="nav-link" href="about" >About</a>
-          </li>
+            <a class="nav-link" href=index.html>Work</a>
+        </li>
+        <li class="nav-object">
+            <a class="nav-link" href="about.html" >About</a>
+        </li>
+  
     
         </ul>
       </div>
