--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         <a class="nav-link" href=#projects>Work</a>
                     </li>
                     <li class="nav-object">
-                        <a class="nav-link" href="about.html" >About</a>
+                        <a class="nav-link" href="about" >About</a>
                     </li>
               
                   </ul>
