--- a/about.html
+++ b/about.html
@@ -79,7 +79,7 @@
                 <article id="about1b">
                     <p>Hi, nice to meet you - I'm Nehal!</p>
     
-                    <p>I graduated from University of California, Davis in December 2020. Currently, I am an Experience Design Intern at Aria Communications LLC. I am also the President of Design Careers Club, where I lead the board of directors to host professional design related events and workshops, which gives me a better insight into human centered design. In the past, I have worked as a UX Intern at the UC Davis C-Stem Center, where I was a co-designer on their website re-design project.</p>
+                    <p>I graduated from University of California, Davis in December 2020. I was a Product Designer at Davis Housing. I was also the President of Design Careers Club, where I lead the board of directors to host professional design related events and workshops, which gave me a better insight into human centered design. In the past, I have worked as a UX Intern at the UC Davis C-Stem Center, where I was a co-designer on their website re-design project.</p>
 
                     <p>My design journey began when I was 8 years old and discovered Microsoft Paint. My love for visual aesthetic encouraged me to be active in the fine arts community in my high school. At the same time, my passion for entrepreneurship and respect for resourceful thinking turned into a major in Managerial Economics and fostered my engagement in multiple business organizations on campus. While I enjoyed understanding markets and policies, I wondered how I could solve real-world problems and help people. This led me to recognise the User Experience Design field where I learned the importance of a good design.</p>
 
