--- a/cstem.html
+++ b/cstem.html
@@ -211,9 +211,16 @@
             Based off of those interviews, we were able to create personas (who are fictional people with motivations and opinions that average those of the people interviewed).
           </div>
         </div>
+        
+
+        <div class="finall-gif">
+          <div class="final-gif">
+            <img src="img/userp1.jpg" alt="user personas">
+            <img src="img/userp2.jpg" alt="user personas"></div>
 
         <div class="final-gif">
-          <img src="img/userpersonas.png" alt="user personas">
+          <img src="img/userp3.jpg" alt="user personas">
+          <img src="img/userp4.jpg" alt="user personas"></div>
         </div>
       </div>
 </div>
