--- a/dcc.html
+++ b/dcc.html
@@ -64,7 +64,7 @@
           <div id="project-date">April - May 2020</div>
           <div id="project-title">Designing A New Way to Serve the Design Community</div>
           <div id="project-description">
-            <a target=”_blank”  href = "https://designcareersclub.org/">Design Careers Club</a> is a registered student organization that hosts student workshops, alumni events and design industry day.
+            <a target=”_blank”  href = "https://designcareersclub.org/">Design Careers Club</a> is a registered student organization that hosts student workshops, alumni events and design careers fair.
           </div>
     </div>
 </div>
@@ -88,7 +88,7 @@
 					<div class="detail-container">
 							<div class="detail-title">Tools</div>
 							<div class="emoji-img">✒️</div>
-							<div class="details-description">Adobe XD<br>Notion<br>Google Sheets</div>
+							<div class="details-description">Figma<br>Notion<br>Google Sheets</div>
 					</div>
 		</div>
 
@@ -186,7 +186,7 @@
 </div>
 
 <div class="break-down-container">
-          <div class="break-down-row">
+        <div class="break-down-row">
          <div class="break-down-text">
           <div class="break-down-title">Needs & Personas</div>
           <div class="break-down-description">
@@ -197,175 +197,18 @@
                 <p><b>Recruiters:</b> The recruiters will be encouraged to connect and employ current design students that they meet at club events.</p>
                 <p><b>The DCC Board:</b> This website will need to be accessed and edited by the board members. They will maintain relevant information which requires editing to be easy and the site to work for longevity.</p>
           </div>
-        </div></div>
+        </div>
+        
+        <div class="userfinall-gif">
+            <img src="img/dccuser1.jpg" alt="user personas">
+            <img src="img/dccuser2.jpg" alt="user personas">
+          <img src="img/dccuser3.jpg" alt="user personas">
+          <img src="img/dccuser4.jpg" alt="user personas"></div>
+      
+
+      </div>
       </div>
 
-      <div class="persona-container">
-      <section class="col-md-8   col-12">
-        <!-- Persona Cards -->
-        <div id="carouselExampleIndicators" class="carousel slide persona_carousel" data-ride="carousel">
-          <div class="carousel-inner">
-            <div class="carousel-item active carousel-item-left">
-              <div class="persona_wrapper col-lg-9 col-12">
-                <div class="card">
-                  <img class="card-img-top" src="img/dccuserone.png">
-                  <div class="card-body">
-                    <h4 class="victoria"><i class="fas fa-user-circle"></i> Victoria</h4>
-                                <h7 class="victoria">Design Student</h7>
-                                <h5 class="card-title">Goals:</h5>
-                                <ul>
-                                  <li>Access event and workshops information</li>
-                                   <li>Register for events and get tickets</li>
-                                   <li>Sign up for mentorship program with the alumni</li>
-                                </ul>
-                                <h5 class="card-title">Pain Points:</h5>
-                                <ul>
-                                  <li>The website not being mobile friendly</li>
-                                   <li>Not being able to access information easily</li>
-                                   <li>Not being aesthetically pleasing</li>
-                                </ul>
-                                <div class="card-footer">
-                                  <h5 class="card-title">Use Case:</h5>
-                                  <ol>
-                                    <li>Interested in <u>events, workshops, mentorship</u></li>
-                                    <li><u>Professional opportunities</u> and mentorship </li>
-                                  </ol>
-                                </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="carousel-item carousel-item-next carousel-item-left">
-              <div class="persona_wrapper col-lg-9 col-12">
-                  <div class="card">
-                    <img class="card-img-top" src="img/dccusertwo.png">
-                    <div class="card-body">
-                        <h4 class="glenda"><i class="fas fa-user-circle"></i> Glenda</h4>
-                        <h7 class="glenda">Design Faculty</h7>
-                        <h5 class="card-title">Goals:</h5>
-                        <ul>
-                          <li>Promote job opportunities and events to students</li>
-                          <li>Contact the board and club members</li>
-                          <li> Access alumni information for department purposes</li>
-                        </ul>
-                        <h5 class="card-title">Pain Points:</h5>
-                        <ul>
-                          <li>The website not being easy to navigate</li>
-                          <li>Layout of website is confusing</li>
-                          <li>Outdated information on events and alumni</li>
-                        </ul>
-                        <div class="card-footer">
-                          <h5 class="card-title">Use Case:</h5>
-                          <ol>
-                            <li>The website being <u>mobile friendly</u></li>
-                            <li>Being able to access <u>information</u> easily</li>
-                          </ol>
-                        </div>
-                    </div>
-                  </div>
-                </div>
-            </div>
-            <div class="carousel-item">
-              <div class="persona_wrapper col-lg-9 col-12">
-                <div class="card">
-                  <img class="card-img-top" src="img/dccuserthree.png">
-                  <div class="card-body">
-                    <h4 class="john"><i class="fas fa-user-circle"></i> John</h4>
-                    <h7 class="john">Design Recruiter</h7>
-                    <h5 class="card-title">Goals:</h5>
-                    <ul>
-                      <li>Being able to connect with students</li>
-                      <li>Getting event information and materials online</li>
-                      <li>Viewing portfolios to choose the right candidate</li>
-                    </ul>
-                    <h5 class="card-title">Frustrations:</h5>
-                    <ul>
-                      <li>Unreliable information and inaccessible event forms</li>
-                      <li>The overall website being unintuitive</li>
-                      <li>Not being able to contact the board and club members</li>
-                    </ul>
-                    <div class="card-footer">
-                      <h5 class="card-title">Use Cases:</h5>
-                      <ol>
-                        <li>The student information being available</li>
-                        <li>Connect with students and faculty</li>
-                      </ol>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <div class="persona_wrapper col-lg-9 col-12">
-                <div class="card">
-                  <img class="card-img-top" src="img/dccuserfour.png">
-                  <div class="card-body">
-                    <h4 class="jamie"><i class="fas fa-user-circle"></i> Jamie</h4>
-                                <h7 class="jamie">Design Alumni</h7>
-                                <h5 class="card-title">Goals:</h5>
-                                <ul>
-                                  <li>Being able to mentor design students</li>
-                                  <li>Manage and update content on the website</li>
-                                  <li>Keep up to date with current events within the department</li>
-                                </ul>
-                                <h5 class="card-title">Frustrations:</h5>
-                                <ul>
-                                  <li>Some information is outdated</li>
-                                  <li>Hard to navigate the website/information is hard to find</li>
-                                  <li>There is too much information on the website</li>
-                                </ul>
-                                <div class="card-footer">
-                                  <h5 class="card-title">Use Case:</h5>
-                                  <ol>
-                                    <li><u>Mentor/mentee program</u> and contact information</li>
-                                    <li>Connecting with board and faculty</li>
-                                  </ol>
-                                </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <div class="persona_wrapper col-lg-9 col-12">
-                <div class="card">
-                  <img class="card-img-top" src="img/dccuserfive.png">
-                  <div class="card-body">
-                    <h4 class="vivian"><i class="fas fa-user-circle"></i> Vivian</h4>
-                                <h7 class="vivian">The Board Member</h7>
-                                <h5 class="card-title">Goals:</h5>
-                                <ul>
-                                  <li>Editing and managing the website</li>
-                                   <li> Updating for events and workshops</li>
-                                   <li> Gaining traction on newsletter and blog</li>
-                                </ul>
-                                <h5 class="card-title">Frustrations:</h5>
-                                <ul>
-                                  <li>The website and layout is confusing</li>
-                                  <li>Not being able to edit information easily</li>
-                                  <li>The recruitment process is not clearly available</li>
-                                </ul>
-                                <div class="card-footer">
-                                  <h5 class="card-title">Use Case:</h5>
-                                  <ol>
-                                    <li><u>Editing and managing</u> the website</li>
-                                      <li><u>Recruitment</u> and events process  </li>
-                                  </ol>
-                                </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"><i class="fas fa-chevron-left"></i></span>
-                <span class="sr-only" style="color:black;">Previous</span>
-                </a>
-                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"><i class="fas fa-chevron-right"></i></span>
-            <span class="sr-only">Next</span>
-          </a>
-              </div>
-        </section></div>
 
     <div class="break-down-container">
       <div class="break-down-row">
