--- a/dhousing.html
+++ b/dhousing.html
@@ -116,7 +116,7 @@
   <div class="storyline">
       <div class="storyline-title">The Story</div>
       <div class="storyline-description">
-        Unfortunately, the work I did at Davis Housing must remain confidential at this time. What I can say is that I helped lay the foundation for the digital experience of a new infromation-search engine. I collaborated with a team to build the pilot version of the website that was built and launched for testing: presenting designs, and research to the stakeholders weekly. Additionally, collaborated with the engineering team to ensure my designs were built to spec. The launch date currently remains TBD. But If you would like to check out Davis Housing's previous website, then click <a target=”_blank”  href = "https://davishousing.com/">here</a>.
+        Unfortunately, the work I did at Davis Housing must remain confidential at this time. What I can say is that I helped lay the foundation for the digital experience of a new information-search engine. I collaborated with a team to build the pilot version of the website that was built and launched for testing: presenting designs, and research to the stakeholders weekly. Additionally, collaborated with the engineering team to ensure my designs were built to spec. You can check out the new Davis Housing website <a target=”_blank”  href = "https://davishousing.com/">here</a>.
       </div>
     </div>
 
