--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         </div> -->
             <div id="header_text" >    
                 <h2>Hello! <span style="color:#eabb97;">I'm Nehal</span>.</h2>
-                <p style="font-size: 20px;">San Francisco based product and visual designer</p></div>
+                <p style="font-size: 1.7rem;">San Francisco based product and visual designer</p></div>
             </div>
 
 
