--- a/play.html
+++ b/play.html
@@ -73,7 +73,7 @@ gtag('config', 'UA-110931258-2');
                     </nav>
                 </div>
             </div>
-            <div class="transition-wrap">
+            <!-- <div class="transition-wrap">
                 <div class="sections">
                     
                 <section id="section_jwk2hcit4" class="content-block" data-column-mode-sm="single" data-column-mode-xs="single" data-justify="center">
@@ -242,7 +242,7 @@ gtag('config', 'UA-110931258-2');
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
     <div class="pswp" tabindex="-1" role="dialog" aria-hidden="true">
 <div class="pswp__bg"></div>
 <div class="pswp__scroll-wrap">
