--- a/play.html
+++ b/play.html
@@ -80,7 +80,8 @@
               <div class="container" data-nav="logo-left-menu-right">
                 <div class="navbar-inner menu-type-text" data-xl-width="12" data-navbar-type="container">
                   <div class="logo navbar-left" data-font="font_shi8d64tg"><a href="https://nehalj.com" title="Nehal Jain">Nehal Jain</a></div>
-                  <nav class="standard navbar-right" data-font="font_k0ixjyago"><ul class="menu"><li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-480"><a href="https://nehalj.com/work"><span>Work</span></a></li>
+                  <nav class="standard navbar-right" data-font="font_k0ixjyago"><ul class="menu">
+                    <!-- <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-480"><a href="https://nehalj.com/work"><span>Work</span></a></li> -->
                   <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-537"><a href="https://nehalj.com/play"><span>Play</span></a></li>
                   <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-491"><a href="https://nehalj.com/about"><span>About</span></a></li>
                   </ul></nav>
@@ -93,7 +94,7 @@
               <div class="overlay-menu-inner" data-xl-width="12">
                 <nav class="overlay-nav" data-justify="center" data-align="align-middle">
                   <ul class="container">
-                    <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-480"><a href="https://nehalj.com/work"><span>Work</span></a></li>
+                    <!-- <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-480"><a href="https://nehalj.com/work"><span>Work</span></a></li> -->
                     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-537"><a href="https://nehalj.com/play"><span>Play</span></a></li>
                     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-491"><a href="https://nehalj.com/about"><span>About</span></a></li>
                   </ul>
